--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build
-        run: make
+        run: ./scripts/build.sh
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.0
