--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,8 @@ jobs:
         id: get_version
         run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
 
-      - name: Select Xcode 12
-        run: sudo xcode-select -s /Applications/Xcode_12.app
-
       - name: Build
-        run: make
+        run: ./scripts/build.sh
 
       - name: Create Release
         id: create_release
