--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -1,6 +1,7 @@
 name: Update Swift Package dependencies
 
 on: 
+  workflow_dispatch:
   schedule:
     - cron: '0 8 * * 1' # every monday AM 8:00
 jobs:
